--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.555.0",
     "next": "16.0.3",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
